server connected to bd
