# src/models/User.js
@@ -1,12 +1,0 @@
-const mongoose = require('mongoose');
-
-const userSchema = new mongoose.Schema({
-  username: { type: String, required: true, unique: true },
-  email: { type: String, required: true, unique: true },
-  password: { type: String, required: true },
-  firstName: { type: String },
-  lastName: { type: String },
-  role: { type: String, default: 'user' }
-});
-
-module.exports = mongoose.model('User', userSchema);
